[package]
name = "snowflake-sql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_tuple = "0.5.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
